--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,32 @@
         <artifactId>commons-io</artifactId>
         <version>2.14.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.bytes-pot/daraja-api -->
+    <dependency>
+        <groupId>com.bytes-pot</groupId>
+        <artifactId>daraja-api</artifactId>
+        <version>1.6-b</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+    <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>okhttp</artifactId>
+        <version>4.10.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20231013</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mongodb/bson -->
+    <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>bson</artifactId>
+        <version>4.11.1</version>
+    </dependency>
+
+
 
   </dependencies>
   <build>
