--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <version>4.13.2</version>
+      <scope>compile</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.wildfly.plugins/wildfly-maven-plugin -->
     <dependency>
@@ -94,6 +94,7 @@
         <artifactId>okhttp</artifactId>
         <version>4.10.0</version>
     </dependency>
+    
     <!-- https://mvnrepository.com/artifact/org.json/json -->
     <dependency>
         <groupId>org.json</groupId>
@@ -106,7 +107,19 @@
         <artifactId>bson</artifactId>
         <version>4.11.1</version>
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>4.16.1</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.10.1</version>
+        <scope>compile</scope>
+    </dependency>
 
 
   </dependencies>
@@ -131,8 +144,8 @@
               <artifactId>maven-compiler-plugin</artifactId>
               <version>3.10.1</version>
               <configuration>
-                  <source>11</source>
-                  <target>11</target>
+                  <source>17</source>
+                  <target>17</target>
               </configuration>
       </plugin>
     </plugins>
