--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,49 +1,62 @@
 version: 2.1
+executors:
+  docker-publisher:
+    environment:
+      IMAGE_NAME: mabera/farmersystem
+    docker:
+    - image: cimg/openjdk:17.0.9-node
+
 
 jobs:
   build:
-    docker:
-      - image: circleci/openjdk:11.0.12-jdk-buster
-
-    working_directory: ~/repo
-
+    executor: docker-publisher
     steps:
-      - checkout
-
-      # Setup JDK
-      - run:
-          name: Install JDK
-          command: sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/jdk-11.0.12/bin/java 1
-
-      # Restore dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "pom.xml" }}
-
-      - run:
-          name: Install Dependencies
-          command: mvn dependency:go-offline
-
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: v1-dependencies-{{ checksum "pom.xml" }}
-
-      # Build
-      - run:
-          name: Build
-          command: mvn clean package
-
-      # Run tests
-      - run:
-          name: Run Tests
-          command: mvn test
-
-  deploy:
-    machine:
-      enabled: default
-
+    - checkout
+    - setup_remote_docker:
+        docker_layer_caching: true
+    - run:
+        name: Build Docker Image
+        command: |
+          docker build -t $IMAGE_NAME:latest .
+    - run:
+        name: Archive Docker Image
+        command: docker save -o image.tar $IMAGE_NAME
+    - persist_to_workspace:
+        root: .
+        paths:
+        - ./image.tar
+  publish-latest:
+    executor: docker-publisher
     steps:
-      - checkout
+    - attach_workspace:
+        at: /tmp/workspace
+    - setup_remote_docker:
+        docker_layer_caching: true
+    - run:
+        name: Load archived Docker
+        command: docker load -i /tmp/workspace/image.tar
+    - run:
+        name: Publish Docker Image to Docker Hub
+        command: |
+          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+          IMAGE_TAG="0.0.${CIRCLE_BUILD_NUM}"
+          docker tag $IMAGE_NAME:latest $IMAGE_NAME:$IMAGE_TAG
+          docker push $IMAGE_NAME:latest
+          docker push $IMAGE_NAME:$IMAGE_TAG
 
-      # Here goes the deployment steps, it could be deploying to a server, a cloud provider, etc.
+workflows:
+  version: 2
+  build-main:
+    jobs:
+    - build:
+        filters:
+          branches:
+            only:
+            - main
+    - publish-latest:
+        requires:
+        - build
+        filters:
+          branches:
+            only:
+            - main
