changes to the dockerfile and removal of standalone.xml and module.xml from the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,9 @@
 target
 /target
 .target
-standalone.xml
-module.xml
-maven-status
+# standalone.xml
+# module.xml
+# maven-status
 
 # Package Files #
 *.jar
