--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,27 @@
-version: '3'
+version: "3"
+
 services:
-  # mysql service
-  farmerdb:
-    image: mysql:latest
-    container_name: farmer-system
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=root
-    expose:
-      - 3306
-    networks:
-      - database
-    
-  farmer-app:
-    image: mabera/farmersystem:latest
-    expose:
-      - 8080
-    networks:
-      - database
-    environment:
-      - MYSQL_HOST=mysql
-      - MYSQL_PORT=3306
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=root
-      - MYSQL_DATABASE=mabera
-    
+    mysqld:
+        image: mysql:latest
+        container_name: farmer-system
+        restart: always
+        environment:
+            MYSQL_ROOT_PASSWORD: root
+            MYSQL_DATABASE: mabera
+            MYSQL_PORT: "3306"
+        volumes:
+            - mysql-data:/var/lib/mysql
+       
 
-networks:
-  database:
-    # bridge: database
-    # external: true
+    farmer-app:
+        image: mabera/farmersystem:latest
+        ports:
+            - "8080:8080"
+        depends_on:
+            - mysqld
+        environment:
+            MYSQL_HOST: mysqld
+        
 
-
+volumes:
+    mysql-data:
